Add numpy to trulens-explain dependencies and bump python>=3.8 (#267)
* add np

* Update setup.py

* display yapf version

* print yapf version

* fix fmt signature

* fmt explain

* Use PIL.Image.LANCZOS

--- a/trulens_explain/notebooks/intro_demo_pytorch.ipynb
+++ b/trulens_explain/notebooks/intro_demo_pytorch.ipynb
@@ -129,7 +129,7 @@
     "    # View the image.\n",
     "    plt.imshow(img)\n",
     "    \n",
-    "    x = np.array(img.resize((224,224), PIL.Image.ANTIALIAS))[np.newaxis]\n",
+    "    x = np.array(img.resize((224,224), PIL.Image.LANCZOS))[np.newaxis]\n",
     "    \n",
     "    # Normalize with https://pytorch.org/docs/stable/torchvision/models.html\n",
     "    normalize = transforms.Compose([\n",
