feature: Record viewer (#277)
* draft

* save

* save

* Build and package react components

* hover

* savE

* functionality

* update

* savE

* fix build issue

* fix

* dup var

* break things up

* renaming

* add views to timeline

* styling

* styling

* Save

* save

* update langchain prompt base type and adjust eval page

* release true

* fixes to instrumentation call stack info

* Fix setup.py

* Fix setup.py

* Fix MANIFEST.in

* wrapping threadpoolexecutor

* remove tp finish

* update manifest

---------

Co-authored-by: Shayak Sen <shayak@truera.com>
Co-authored-by: Piotr Mardziel <piotrm@gmail.com>
Co-authored-by: shayaks <47965099+shayaks@users.noreply.github.com>

--- a/trulens_eval/examples/trubot/trubot_tests.ipynb
+++ b/trulens_eval/examples/trubot/trubot_tests.ipynb
@@ -123,9 +123,7 @@
     "\n",
     "for s in selectors:\n",
     "    for m in messages:\n",
-    "        results.append(TP().promise(test_bot, selector=s, question=m))\n",
-    "\n",
-    "TP().finish()"
+    "        results.append(TP().promise(test_bot, selector=s, question=m))"
    ]
   },
   {
