--- a/docs/trulens_eval/trulens_eval_gh_top_readme.ipynb
+++ b/docs/trulens_eval/trulens_eval_gh_top_readme.ipynb
@@ -125,8 +125,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Alternatively, you can run `trulens-eval` from a command line in the same folder to start the dashboard.\n",
+    "\n",
     "For more information, see [TruLens-Eval Documentation](https://www.trulens.org/trulens_eval/quickstart/)."
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
