upgrade llama_index >=0.7.0 (#290)
* llama 0.7 changed some path structures

* remove from notebook call

--- a/trulens_eval/examples/frameworks/llama_index/llamaindex-subquestion-query.ipynb
+++ b/trulens_eval/examples/frameworks/llama_index/llamaindex-subquestion-query.ipynb
@@ -12,6 +12,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -43,10 +44,9 @@
    "outputs": [],
    "source": [
     "# Import main tools for building app\n",
-    "from llama_index import VectorStoreIndex, SimpleDirectoryReader, ServiceContext, ResponseSynthesizer\n",
-    "from llama_index.indices.document_summary import DocumentSummaryIndexRetriever\n",
+    "from llama_index import VectorStoreIndex, SimpleDirectoryReader, ServiceContext\n",
     "from llama_index.tools import QueryEngineTool, ToolMetadata\n",
-    "from llama_index.query_engine import SubQuestionQueryEngine, RetrieverQueryEngine\n",
+    "from llama_index.query_engine import SubQuestionQueryEngine\n",
     "\n",
     "# load data\n",
     "alice = SimpleDirectoryReader(input_dir=\"./data/alice\").load_data()"
