--- a/trulens_eval/examples/vector-dbs/pinecone/constructing_optimal_pinecone.ipynb
+++ b/trulens_eval/examples/vector-dbs/pinecone/constructing_optimal_pinecone.ipynb
@@ -29,7 +29,8 @@
    "outputs": [],
    "source": [
     "'''!pip install -qU \\\n",
-    "  langchain==0.0.162 \\\n",
+    "  trulens_eval==0.5.0 \\\n",
+    "  langchain==0.0.232 \\\n",
     "  openai==0.27.7 \\\n",
     "  tiktoken==0.4.0 \\\n",
     "  \"pinecone-client[grpc]\"==2.2.1 \\\n",
@@ -422,7 +423,11 @@
    "source": [
     "index = pinecone.GRPCIndex(index_name_v2)\n",
     "# wait a moment for the index to be fully initialized\n",
-    "time.sleep(1)"
+    "time.sleep(1)\n",
+    "\n",
+    "# upsert documents\n",
+    "for batch in dataset.iter_documents(batch_size=100):\n",
+    "    index.upsert(batch)"
    ]
   },
   {
@@ -493,15 +498,9 @@
     "# wait a moment for the index to be fully initialized\n",
     "time.sleep(1)\n",
     "\n",
-    "index.describe_index_stats()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "index.describe_index_stats()\n",
+    "\n",
+    "# upsert documents\n",
     "for batch in dataset.iter_documents(batch_size=100):\n",
     "    index.upsert(batch)"
    ]
