--- a/trulens_eval/examples/vector-dbs/pinecone/constructing_optimal_pinecone.ipynb
+++ b/trulens_eval/examples/vector-dbs/pinecone/constructing_optimal_pinecone.ipynb
@@ -437,6 +437,14 @@
    "outputs": [],
    "source": [
     "# qa still exists, and will now use our updated vector store\n",
+    "# switch back to normal index for langchain\n",
+    "index = pinecone.Index(index_name_v2)\n",
+    "\n",
+    "# update vectorstore with new index\n",
+    "vectorstore = Pinecone(\n",
+    "    index, embed.embed_query, text_field\n",
+    ")\n",
+    "\n",
     "\n",
     "# recreate qa from vector store\n",
     "qa = RetrievalQA.from_chain_type(\n",
@@ -680,7 +688,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3.11.3 ('pinecone_example')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -694,7 +702,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.8.16"
   },
   "vscode": {
    "interpreter": {
