2 more methods for configuring keys (#241)
* docs

* remove key printout

* typo

* rename to check_keys

* check for keys in provider class constructors with a nicer fail message

* undo

* remove check_keys from examples

* updates

* update notebook

* another one

* forgot one

* small fixes to error

* updated notebooks

* fix bad docs

* fixed fill in values

--- a/trulens_eval/examples/frameworks/langchain/langchain_model_comparison.ipynb
+++ b/trulens_eval/examples/frameworks/langchain/langchain_model_comparison.ipynb
@@ -70,12 +70,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from trulens_eval.keys import setup_keys\n",
+    "from trulens_eval.keys import check_keys\n",
     "\n",
-    "setup_keys(\n",
-    "    OPENAI_API_KEY=\"to fill in\",\n",
-    "    HUGGINGFACE_API_KEY=\"to fill in\",\n",
-    "    HUGGINGFACEHUB_API_TOKEN=\"to fill in\" # ok if same as the one above\n",
+    "check_keys(\n",
+    "    \"OPENAI_API_KEY\",\n",
+    "    \"HUGGINGFACE_API_KEY\",\n",
+    "    \"HUGGINGFACEHUB_API_TOKEN\"\n",
     ")"
    ]
   },
