--- a/trulens_eval/examples/frameworks/langchain/langchain_summarize.ipynb
+++ b/trulens_eval/examples/frameworks/langchain/langchain_summarize.ipynb
@@ -35,11 +35,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from trulens_eval.keys import setup_keys\n",
+    "from trulens_eval.keys import check_keys\n",
     "\n",
-    "setup_keys(\n",
-    "    OPENAI_API_KEY=\"fill this in if not in your environment\",\n",
-    "    HUGGINGFACE_API_KEY='fill this in if not in your environment'\n",
+    "check_keys(\n",
+    "    \"OPENAI_API_KEY\",\n",
+    "    \"HUGGINGFACE_API_KEY\"\n",
     ")"
    ]
   },
