--- a/trulens_eval/examples/trubot/trubot_example.ipynb
+++ b/trulens_eval/examples/trubot/trubot_example.ipynb
@@ -78,11 +78,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from trulens_eval.keys import setup_keys\n",
+    "from trulens_eval.keys import check_keys\n",
     "\n",
-    "setup_keys(\n",
-    "    OPENAI_API_KEY=\"fill this in if not in your environment\",\n",
-    "    HUGGINGFACE_API_KEY='fill this in if not in your environment'\n",
+    "check_keys(\n",
+    "    \"OPENAI_API_KEY\",\n",
+    "    \"HUGGINGFACE_API_KEY\"\n",
     ")"
    ]
   },
@@ -147,9 +147,9 @@
     "embedding = OpenAIEmbeddings(model='text-embedding-ada-002')  # 1536 dims\n",
     "\n",
     "if db_host == \"pinecone\":\n",
-    "    setup_keys(\n",
-    "        PINECONE_API_KEY=\"fill this in\",\n",
-    "        PINECONE_ENV='fill this in'\n",
+    "    check_keys(\n",
+    "        \"PINECONE_API_KEY\",\n",
+    "        \"PINECONE_ENV\"\n",
     "    )\n",
     "\n",
     "    # Pinecone configuration if using pinecone.\n",
@@ -158,8 +158,8 @@
     "    import pinecone\n",
     "\n",
     "    pinecone.init(\n",
-    "        api_key=PINECONE_API_KEY,  # find at app.pinecone.io\n",
-    "        environment=PINECONE_ENV  # next to api key in console\n",
+    "        api_key=os.environ.get(\"PINECONE_API_KEY\"),  # find at app.pinecone.io\n",
+    "        environment=os.environ.get(\"PINECONE_ENV\")  # next to api key in console\n",
     "    )\n",
     "\n",
     "    # If using pinecone, make sure you create your index under name 'llmdemo' or\n",
@@ -655,7 +655,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.17"
+   "version": "3.8.16"
   },
   "orig_nbformat": 4
  },
