--- a/trulens_eval/examples/trubot/trubot_tests.ipynb
+++ b/trulens_eval/examples/trubot/trubot_tests.ipynb
@@ -45,13 +45,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from trulens_eval.keys import setup_keys\n",
+    "from trulens_eval.keys import check_or_set_keys\n",
     "\n",
-    "setup_keys(\n",
-    "    OPENAI_API_KEY=\"fill this in if not in your environment\",\n",
-    "    HUGGINGFACE_API_KEY='fill this in if not in your environment',\n",
-    "    PINECONE_API_KEY=\"fill this in\",\n",
-    "    PINECONE_ENV='fill this in'\n",
+    "check_or_set_keys(\n",
+    "    OPENAI_API_KEY=\"to fill in\",\n",
+    "    HUGGINGFACE_API_KEY=\"to fill in\",\n",
+    "    PINECONE_API_KEY=\"to fill in\",\n",
+    "    PINECONE_ENV=\"to fill in\"\n",
     ")"
    ]
   },
