--- a/trulens_eval/examples/trubot/webindex.ipynb
+++ b/trulens_eval/examples/trubot/webindex.ipynb
@@ -34,7 +34,11 @@
     "\n",
     "sys.path.append(str(Path().cwd().parent.parent.resolve()))\n",
     "\n",
-    "from trulens_eval.keys import *\n",
+    "from trulens_eval.keys import check_keys\n",
+    "\n",
+    "check_keys(\n",
+    "    \"OPENAI_API_KEY\"\n",
+    ")\n",
     "\n",
     "\"ignore me\"\n",
     "\n",
@@ -648,11 +652,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from trulens_eval.keys import *\n",
+    "check_keys(\n",
+    "    \"PINECONE_API_KEY\",\n",
+    "    \"PINECONE_ENV\"\n",
+    ")\n",
     "\n",
     "pinecone.init(\n",
-    "    api_key=PINECONE_API_KEY,  # find at app.pinecone.io\n",
-    "    environment=PINECONE_ENV   # next to api key in console\n",
+    "    api_key=os.environ.get(\"PINECONE_API_KEY\"),  # find at app.pinecone.io\n",
+    "    environment=os.environ.get(\"PINECONE_ENV\")  # next to api key in console\n",
     ")"
    ]
   },
