--- a/trulens_eval/examples/frameworks/langchain/langchain_quickstart.ipynb
+++ b/trulens_eval/examples/frameworks/langchain/langchain_quickstart.ipynb
@@ -26,11 +26,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from trulens_eval.keys import setup_keys\n",
+    "from trulens_eval.keys import check_keys\n",
     "\n",
-    "setup_keys(\n",
-    "    OPENAI_API_KEY=\"to fill in\",\n",
-    "    HUGGINGFACE_API_KEY=\"to fill in\"\n",
+    "check_keys(\n",
+    "    \"OPENAI_API_KEY\",\n",
+    "    \"HUGGINGFACE_API_KEY\"\n",
     ")"
    ]
   },
@@ -277,7 +277,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.8.16"
   },
   "vscode": {
    "interpreter": {
