--- a/trulens_eval/examples/trubot/webindex.ipynb
+++ b/trulens_eval/examples/trubot/webindex.ipynb
@@ -75,7 +75,7 @@
     "from url_normalize import url_normalize\n",
     "\n",
     "from trulens_eval.util import first\n",
-    "from trulens_eval.util import UNICODE_CHECK\n",
+    "from trulens_eval.utils.text import UNICODE_CHECK\n",
     "\n",
     "TRUERA_BASE_URL = 'https://truera.com/'\n",
     "TRUERA_DOC_URL = 'https://docs.truera.com/1.34/public/'\n",
