Add imports to yelp agent notebook (#311)
* Add imports to yelp agent notebook
* Comment pip installs

---------

Co-authored-by: Shayak Sen <shayak@truera.com>

--- a/trulens_eval/examples/frameworks/llama_index/llamaindex-yelp-agent.ipynb
+++ b/trulens_eval/examples/frameworks/llama_index/llamaindex-yelp-agent.ipynb
@@ -20,10 +20,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Setup OpenAI Agent\n",
-    "from llama_index.agent import OpenAIAgent\n",
-    "import openai\n",
-    "openai.api_key = '...'"
+    "'''!pip install trulens_eval==0.6.0 \\\n",
+    "             llama_index==0.7.11 \\\n",
+    "             llama_hub==0.0.13 \\\n",
+    "             yelpapi==2.5.0'''"
    ]
   },
   {
@@ -33,8 +33,20 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ[\"OPENAI_API_KEY\"] = \"...\"\n",
-    "os.environ[\"HUGGINGFACE_API_KEY\"] = \"...\""
+    "os.environ[\"OPENAI_API_KEY\"] = \"...\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Setup OpenAI Agent\n",
+    "from llama_index.agent import OpenAIAgent\n",
+    "import openai\n",
+    "import os\n",
+    "openai.api_key = os.environ[\"OPENAI_API_KEY\"]"
    ]
   },
   {
@@ -47,7 +59,8 @@
     "from llama_hub.tools.yelp.base import YelpToolSpec\n",
     "from llama_index.tools.tool_spec.load_and_search.base import LoadAndSearchToolSpec\n",
     "\n",
-    "tool_spec = YelpToolSpec(api_key='...', client_id='...')"
+    "# Add Yelp API key and client ID\n",
+    "tool_spec = YelpToolSpec(api_key=\"...\", client_id=\"...\")"
    ]
   },
   {
@@ -200,7 +213,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.11.4 ('agent_example')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -214,9 +227,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.8.16"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "9404565ab2271c01f32a5ebf202ce74a5a811d6909f1828a5ff1298ed34c2b97"
