--- a/trulens_eval/examples/feedback_functions.ipynb
+++ b/trulens_eval/examples/feedback_functions.ipynb
@@ -6,14 +6,37 @@
    "id": "691ec232",
    "metadata": {},
    "source": [
-    "# Out-of-the-box Feedback Functions\n",
-    "See: <https://www.trulens.org/trulens_eval/api/feedback/>\n",
+    "# Feedback Functions\n",
+    "\n",
+    "A feedback function scores the output of an LLM application by analyzing generated text as part of an LLM application (or a downstream model or application built on it). This guide provides details about the feedback functions that are implemented out of the box by TruLens. At the end of the guide, you can find additional information about how to create custom feedback functions.\n",
+    "\n",
+    "See also: <https://www.trulens.org/trulens_eval/api/feedback/>\n",
     "\n",
     "## Relevance\n",
     "\n",
     "This evaluates the *relevance* of the LLM response to the given text by LLM prompting.\n",
     "\n",
     "Relevance is currently only available with OpenAI ChatCompletion API.\n",
+    "\n",
+    "TruLens offers two particular flavors of relevance:\n",
+    "1. *Prompt response relevance* is best for measuring the relationship of the final answer to the user inputed question. This flavor of relevance is particularly optimized for the following features:\n",
+    "\n",
+    "    * Relevance requires adherence to the entire prompt.\n",
+    "    * Responses that don't provide a definitive answer can still be relevant\n",
+    "    * Admitting lack of knowledge and refusals are still relevant.\n",
+    "    * Feedback mechanism should differentiate between seeming and actual relevance.\n",
+    "    * Relevant but inconclusive statements should get increasingly high scores as they are more helpful for answering the query.\n",
+    "\n",
+    "    You can read more information about the performance of prompt response relevance by viewing its [smoke test results](../pr_relevance_smoke_tests/).\n",
+    "\n",
+    "2. *Question statement relevance*, sometimes known as context relevance, is best for measuring the relationship of a provided context to the user inputed question. This flavor of relevance is optimized for a slightly different set of features:\n",
+    "    * Relevance requires adherence to the entire query.\n",
+    "    * Long context with small relevant chunks are relevant.\n",
+    "    * Context that provides no answer can still be relevant.\n",
+    "    * Feedback mechanism should differentiate between seeming and actual relevance.\n",
+    "    * Relevant but inconclusive statements should get increasingly high scores as they are more helpful for answering the query.\n",
+    "\n",
+    "    You can read more information about the performance of question statement relevance by viewing its [smoke test results](../qs_relevance_smoke_tests/).\n",
     "\n",
     "## Sentiment\n",
     "\n",
@@ -47,7 +70,7 @@
     "\n",
     "# Adding new feedback functions\n",
     "\n",
-    "Feedback functions are an extensible framework for evaluating LLMs. You can add your own feedback functions to evaluate the qualities required by your application by updating `trulens_eval/feedback.py`. If your contributions would be useful for others, we encourage you to contribute to TruLens!\n",
+    "Feedback functions are an extensible framework for evaluating LLMs. You can add your own feedback functions to evaluate the qualities required by your application by updating `trulens_eval/feedback.py`, or simply creating a new provider class and feedback function in youre notebook. If your contributions would be useful for others, we encourage you to contribute to TruLens!\n",
     "\n",
     "Feedback functions are organized by model provider into Provider classes.\n",
     "\n",
@@ -127,7 +150,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.11.3 ('pinecone_example')",
    "language": "python",
    "name": "python3"
   },
@@ -142,6 +165,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.11.3"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "c68aa9cfa264c12f07062d08edcac5e8f20877de71ce1cea15160e4e8ae95e66"
+   }
   }
  },
  "nbformat": 4,
