--- a/trulens_eval/examples/frameworks/llama_index/llamaindex-yelp-agent.ipynb
+++ b/trulens_eval/examples/frameworks/llama_index/llamaindex-yelp-agent.ipynb
@@ -33,7 +33,15 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ[\"OPENAI_API_KEY\"] = \"...\""
+    "os.environ[\"OPENAI_API_KEY\"] = \"...\"\n",
+    "os.environ[\"HUGGINGFACE_API_KEY\"] = \"...\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Set up our Llama-Index App"
    ]
   },
   {
@@ -43,7 +51,10 @@
    "outputs": [],
    "source": [
     "# Setup OpenAI Agent\n",
+    "import llama_index\n",
     "from llama_index.agent import OpenAIAgent\n",
+    "from llama_index import question_gen\n",
+    "from llama_index.question_gen import types\n",
     "import openai\n",
     "import os\n",
     "openai.api_key = os.environ[\"OPENAI_API_KEY\"]"
@@ -60,32 +71,8 @@
     "from llama_index.tools.tool_spec.load_and_search.base import LoadAndSearchToolSpec\n",
     "\n",
     "# Add Yelp API key and client ID\n",
-    "tool_spec = YelpToolSpec(api_key=\"...\", client_id=\"...\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def llm_standalone(prompt):\n",
-    "    return openai.ChatCompletion.create(\n",
-    "    model=\"gpt-3.5-turbo\",\n",
-    "    messages=[\n",
-    "            {\"role\": \"system\", \"content\": \"You are a question and answer bot, and you answer concisely.\"},\n",
-    "            {\"role\": \"user\", \"content\": prompt}\n",
-    "        ]\n",
-    "    )[\"choices\"][0][\"message\"][\"content\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "llm_standalone(\"what are good restaurants in toronto?\")"
+    "tool_spec = YelpToolSpec(api_key=\"...\",\n",
+    "client_id=\"...\")"
    ]
   },
   {
@@ -106,12 +93,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create a standalone GPT3.5 for comparison"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "agent.chat(\"what are good restaurants in toronto\")"
+    "def llm_standalone(prompt):\n",
+    "    return openai.ChatCompletion.create(\n",
+    "    model=\"gpt-3.5-turbo\",\n",
+    "    messages=[\n",
+    "            {\"role\": \"system\", \"content\": \"You are a question and answer bot, and you answer concisely.\"},\n",
+    "            {\"role\": \"user\", \"content\": prompt}\n",
+    "        ]\n",
+    "    )[\"choices\"][0][\"message\"][\"content\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Custom yelp evaluations\n",
+    "\n",
+    "Here we'll set a number of custom evals specific to our problem, including:\n",
+    "1. Query translation score: Check to make sure the query used by Yelp Business Search matches the user query.\n",
+    "2. Check to see if Yelp ratings are included in the context returned by Yelp business search."
    ]
   },
   {
@@ -126,18 +138,42 @@
     "tru = Tru()\n",
     "\n",
     "class OpenAI_custom(OpenAI):\n",
-    "    def definitive(self, response: str) -> float:\n",
-    "\n",
+    "    def query_translation_score(self, question1: str, question2: str) -> float:\n",
     "        return float(openai.ChatCompletion.create(\n",
     "    model=\"gpt-3.5-turbo\",\n",
     "    messages=[\n",
-    "            {\"role\": \"system\", \"content\": \"Your job is to rate how definitive the following text is on a scale of 1 to 10. Respond with the number only.\"},\n",
-    "            {\"role\": \"user\", \"content\": response}\n",
+    "            {\"role\": \"system\", \"content\": \"Your job is to rate how similar two quesitons are on a scale of 1 to 10. Respond with the number only.\"},\n",
+    "            {\"role\": \"user\", \"content\": f\"QUESTION 1: {question1}; QUESTION 2: {question2}\"}\n",
     "        ]\n",
     "    )[\"choices\"][0][\"message\"][\"content\"]) / 10\n",
     "\n",
+    "    def ratings_usage(self, last_context: str) -> float:\n",
+    "        print(last_context)\n",
+    "        return float(openai.ChatCompletion.create(\n",
+    "    model=\"gpt-3.5-turbo\",\n",
+    "    messages=[\n",
+    "            {\"role\": \"system\", \"content\": \"Your job is to respond with a '1' if the following statement mentions ratings or reviews, and a '0' if not.\"},\n",
+    "            {\"role\": \"user\", \"content\": f\"STATEMENT: {last_context}\"}\n",
+    "        ]\n",
+    "    )[\"choices\"][0][\"message\"][\"content\"])\n",
+    "\n",
     "custom = OpenAI_custom()\n",
-    "definitive = Feedback(custom.definitive).on_output()"
+    "from trulens_eval import Select\n",
+    "query_translation_score = Feedback(custom.query_translation_score).on_input().on(\n",
+    "    Select.Record.calls[0].args.str_or_query_bundle # check the query bundle passed to yelp api\n",
+    ")\n",
+    "ratings_usage = Feedback(custom.ratings_usage).on(\n",
+    "    Select.App.app.chat_history[-1][\"content\"] # check the last content chunk for mentions of ratings or reviews\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ground Truth Eval\n",
+    "\n",
+    "It's also useful in many cases to do ground truth eval with small golden sets. We'll do so here."
    ]
   },
   {
@@ -147,14 +183,54 @@
    "outputs": [],
    "source": [
     "golden_set = [\n",
-    "    {\"query\": \"What's the vibe like at oprhan andy's in SF?\", \"response\": \"cute diner, 50s/60s vibe\"},\n",
+    "    {\"query\": \"What's the vibe like at oprhan andy's in SF?\", \"response\": \"welcoming and friendly\"},\n",
     "    {\"query\": \"Is park tavern in San Fran open yet?\", \"response\": \"Yes\"},\n",
     "    {\"query\": \"I'm in san francisco for the morning, does Juniper serve pastries?\", \"response\": \"Yes\"},\n",
     "    {\"query\": \"What's the address of Gumbo Social in San Francisco?\", \"response\": \"5176 3rd St, San Francisco, CA 94124\"},\n",
-    "    {\"query\": \"What are the reviews like of Gola in SF?\", \"response\": \"Excellent, 4.7/5\"}\n",
+    "    {\"query\": \"What are the reviews like of Gola in SF?\", \"response\": \"Excellent, 4.6/5\"},\n",
+    "    {\"query\": \"Where's the best pizza in New York City\", \"response\": \"Joe's Pizza\"},\n",
+    "    {\"query\": \"What's the best diner in Toronto?\", \"response\": \"The George Street Diner\"}\n",
     "]\n",
     "\n",
     "f_groundtruth = Feedback(GroundTruthAgreement(golden_set).agreement_measure).on_input_output()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Standard Relevance Evals\n",
+    "\n",
+    "Last, we'll add in our standard relevance evals.\n",
+    "\n",
+    "We can use the Select function to capture deep context in our app for QS relevance, alongside our standard QA relevance on input and output."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from trulens_eval import OpenAI as fOpenAI\n",
+    "fopenai = fOpenAI()\n",
+    "# Question/statement relevance between question and last context chunk (i.e. summary)\n",
+    "f_qs_relevance = Feedback(fopenai.qs_relevance).on_input().on(\n",
+    "    Select.App.app.chat_history[-1][\"content\"] # check the last context chunk\n",
+    ")\n",
+    "\n",
+    "# Question/answer relevance between overall question and answer.\n",
+    "f_qa_relevance = Feedback(fopenai.relevance).on_input_output()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Run the dashboard\n",
+    "\n",
+    "By running the dashboard before we start to make app calls, we can see them come in 1 by 1."
    ]
   },
   {
@@ -167,12 +243,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "standalone_app = TruBasicApp(llm_standalone, app_id=\"OpenAIChatCompletion\", feedbacks=[f_groundtruth, definitive])"
+    "### Instrument Yelp App\n",
+    "\n",
+    "We can instrument our yelp app with TruLlama and utilize the full suite of evals we set up."
    ]
   },
   {
@@ -183,7 +259,35 @@
    "source": [
     "yelp_app = TruLlama(agent,\n",
     "    app_id='YelpAgent',\n",
-    "    feedbacks=[definitive, f_groundtruth])"
+    "    tags = \"agent prototype\",\n",
+    "    feedbacks = [f_qa_relevance, f_groundtruth, f_qs_relevance, query_translation_score, ratings_usage])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Instrument Standalone LLM app.\n",
+    "\n",
+    "Since we don't have insight into the OpenAI innerworkings, we cannot run many of the evals on intermediate steps.\n",
+    "\n",
+    "We can still do QA relevance on input and output, and check for similarity of the answers compared to the ground truth."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "standalone_app = TruBasicApp(llm_standalone, app_id=\"OpenAIChatCompletion\", tags = \"comparison\", feedbacks=[f_qa_relevance, f_groundtruth])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Start using our apps!"
    ]
   },
   {
@@ -193,9 +297,11 @@
    "outputs": [],
    "source": [
     "prompt_set = [\"What's the vibe like at oprhan andy's in SF?\",\n",
-    "                \"Is park tavern in San Fran open yet?\",\n",
+    "                \"What are the reviews like of Gola in SF?\",\n",
+    "                \"Where's the best pizza in New York City\",\n",
     "                \"What's the address of Gumbo Social in San Francisco?\",\n",
-    "                \"What are the reviews like of Gola in SF?\"\n",
+    "                \"I'm in san francisco for the morning, does Juniper serve pastries?\",\n",
+    "                \"What's the best diner in Toronto?\"\n",
     "                ]"
    ]
   },
@@ -227,7 +333,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.11.4"
   },
   "vscode": {
    "interpreter": {
