Groundedness experiment base (#316)
* save state

* update provider locations

* documentation

* nit pluralize

* add metadata and multi-output for groundedness

* Update feedback.py

* fix openai instantiation on import

* add faster groundedness

* add to feedback function docs

--- a/trulens_eval/examples/feedback_functions.ipynb
+++ b/trulens_eval/examples/feedback_functions.ipynb
@@ -52,6 +52,10 @@
     "\n",
     "Model agreement uses OpenAI to attempt an honest answer at your prompt with system prompts for correctness, and then evaluates the agreement of your LLM response to this model on a scale from 1 to 10. The agreement with each honest bot is then averaged and scaled from 0 to 1.\n",
     "\n",
+    "## Groundedness\n",
+    "\n",
+    "Groundedness uses OpenAI LLMs or Huggingface NLI to attempt to check if an answer is grounded in its supplied contexts on a scale from 1 to 10. The information overlap or entailment between source and response is then measured, choosing the highest score between sources and then averaged and scaled from 0 to 1.\n",
+    "\n",
     "## Language Match\n",
     "\n",
     "This evaluates if the language of the prompt and response match.\n",
