--- a/trulens_eval/examples/frameworks/llama_index/llama_index_quickstart.ipynb
+++ b/trulens_eval/examples/frameworks/llama_index/llama_index_quickstart.ipynb
@@ -27,8 +27,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install trulens-eval\n",
-    "!pip install llama_index==0.7.0"
+    "!pip install trulens-eval==0.6.0\n",
+    "!pip install llama_index==0.7.11"
    ]
   },
   {
@@ -146,7 +146,7 @@
     "# Question/statement relevance between question and each context chunk.\n",
     "f_qs_relevance = Feedback(openai.qs_relevance).on_input().on(\n",
     "    TruLlama.select_source_nodes().node.text\n",
-    ").aggregate(np.min)"
+    ").aggregate(np.mean)"
    ]
   },
   {
