--- a/trulens_eval/examples/colab/quickstarts/llama_index_quickstart_colab.ipynb
+++ b/trulens_eval/examples/colab/quickstarts/llama_index_quickstart_colab.ipynb
@@ -40,8 +40,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install trulens-eval\n",
-    "!pip install llama_index==0.7.0"
+    "!pip install trulens-eval==0.7.0\n",
+    "!pip install llama_index==0.7.11"
    ]
   },
   {
@@ -159,7 +159,7 @@
     "# Question/statement relevance between question and each context chunk.\n",
     "f_qs_relevance = Feedback(openai.qs_relevance).on_input().on(\n",
     "    TruLlama.select_source_nodes().node.text\n",
-    ").aggregate(np.min)"
+    ").aggregate(np.mean)"
    ]
   },
   {
