Update llamaindex-subquestion-query.ipynb (#329)

--- a/trulens_eval/examples/frameworks/llama_index/llamaindex-subquestion-query.ipynb
+++ b/trulens_eval/examples/frameworks/llama_index/llamaindex-subquestion-query.ipynb
@@ -18,9 +18,9 @@
    "source": [
     "### Impact of Embeddings on Quality with Sub Question Query\n",
     "\n",
-    "In this tutorial, we load longer text (Fellowship of the Ring) and utilize Llama-Index Sub Question Query to evlauate a complex question around Frodo's character evolution.\n",
+    "In this tutorial, we load longer text (Alice in Wonderland) and utilize Llama-Index Sub Question Query to evlauate a complex questions on the book.\n",
     "\n",
-    "In addition, we will iterate through different embeddings and chunk sizes and use TruLens to select the best one."
+    "In addition, we will combine our choice of embedding with our query engine selection and use TruLens to select the most performant combination."
    ]
   },
   {
