colab buttons for langchain, md cleanup (#331)
* colab buttons for langchain, md cleanup

* colab links, self-contained data readers from web

* colab links

* colab links

--- a/trulens_eval/examples/frameworks/langchain/langchain_groundtruth.ipynb
+++ b/trulens_eval/examples/frameworks/langchain/langchain_groundtruth.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# Quickstart\n",
     "\n",
-    "In this quickstart you will create a evaluate a LangChain app using ground truth."
+    "In this quickstart you will create a evaluate a LangChain app using ground truth.\n",
+    "\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/truera/trulens/blob/main/trulens_eval/examples/frameworks/langchain/langchain_groundtruth.ipynb)"
    ]
   },
   {
