--- a/trulens_eval/examples/frameworks/langchain/langchain_quickstart.ipynb
+++ b/trulens_eval/examples/frameworks/langchain/langchain_quickstart.ipynb
@@ -7,7 +7,9 @@
    "source": [
     "# Quickstart\n",
     "\n",
-    "In this quickstart you will create a simple LLM Chain and learn how to log it and get feedback on an LLM response."
+    "In this quickstart you will create a simple LLM Chain and learn how to log it and get feedback on an LLM response.\n",
+    "\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/truera/trulens/blob/main/trulens_eval/examples/frameworks/langchain/langchain_quickstart.ipynb)"
    ]
   },
   {
@@ -26,12 +28,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from trulens_eval.keys import check_keys\n",
-    "\n",
-    "check_keys(\n",
-    "    \"OPENAI_API_KEY\",\n",
-    "    \"HUGGINGFACE_API_KEY\"\n",
-    ")"
+    "import os\n",
+    "os.environ[\"OPENAI_API_KEY\"] = \"...\"\n",
+    "os.environ[\"HUGGINGFACE_API_KEY\"] = \"...\""
    ]
   },
   {
@@ -277,7 +276,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.11.3"
   },
   "vscode": {
    "interpreter": {
