--- a/trulens_eval/examples/frameworks/llama_index/llama_index_groundtruth.ipynb
+++ b/trulens_eval/examples/frameworks/llama_index/llama_index_groundtruth.ipynb
@@ -1,28 +1,14 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Run the below cell if running from the github repo.\n",
-    "\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
-    "from pathlib import Path\n",
-    "import sys\n",
-    "\n",
-    "sys.path.append(str(Path().cwd().parent.parent.parent.resolve()))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Quickstart\n",
     "\n",
-    "In this quickstart you will create a simple Llama Index App and learn how to log it and get feedback on an LLM response."
+    "In this quickstart you will create a simple Llama Index App and learn how to log it and get feedback on an LLM response.\n",
+    "\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/truera/trulens/blob/main/trulens_eval/examples/frameworks/llama_index/llama_index_groundtruth.ipynb)"
    ]
   },
   {
@@ -41,8 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ! pip install trulens-eval\n",
-    "# ! pip install llama_index==0.7.0"
+    "! pip install trulens-eval llama_index==0.7.0"
    ]
   },
   {
@@ -59,9 +44,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#import os\n",
-    "#os.environ[\"OPENAI_API_KEY\"] = \"...\"\n",
-    "#os.environ[\"HUGGINGFACE_API_KEY\"] = \"...\""
+    "import os\n",
+    "os.environ[\"OPENAI_API_KEY\"] = \"...\"\n",
+    "os.environ[\"HUGGINGFACE_API_KEY\"] = \"...\""
    ]
   },
   {
@@ -254,50 +239,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Leaderboard\n",
-    "\n",
-    "Understand how your LLM application is performing at a glance. Once you've set up logging and evaluation in your application, you can view key performance statistics including cost and average feedback value across all of your LLM apps using the chain leaderboard. As you iterate new versions of your LLM application, you can compare their performance across all of the different quality metrics you've set up.\n",
-    "\n",
-    "Note: Average feedback values are returned and displayed in a range from 0 (worst) to 1 (best).\n",
-    "\n",
-    "![Chain Leaderboard](https://www.trulens.org/Assets/image/Leaderboard.png)\n",
-    "\n",
-    "To dive deeper on a particular chain, click \"Select Chain\".\n",
-    "\n",
-    "### Understand chain performance with Evaluations\n",
-    " \n",
-    "To learn more about the performance of a particular chain or LLM model, we can select it to view its evaluations at the record level. LLM quality is assessed through the use of feedback functions. Feedback functions are extensible methods for determining the quality of LLM responses and can be applied to any downstream LLM task. Out of the box we provide a number of feedback functions for assessing model agreement, sentiment, relevance and more.\n",
-    "\n",
-    "The evaluations tab provides record-level metadata and feedback on the quality of your LLM application.\n",
-    "\n",
-    "![Evaluations](https://www.trulens.org/Assets/image/Leaderboard.png)\n",
-    "\n",
-    "### Deep dive into full chain metadata\n",
-    "\n",
-    "Click on a record to dive deep into all of the details of your chain stack and underlying LLM, captured by tru_chain.\n",
-    "\n",
-    "![Explore a Chain](https://www.trulens.org/Assets/image/Chain_Explore.png)\n",
-    "\n",
-    "If you prefer the raw format, you can quickly get it using the \"Display full chain json\" or \"Display full record json\" buttons at the bottom of the page."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Note: Feedback functions evaluated in the deferred manner can be seen in the \"Progress\" page of the TruLens dashboard."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Or view results directly in your notebook"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "tru.get_records_and_feedback(app_ids=[])[0] # pass an empty list of app_ids to get all"
    ]
