--- a/trulens_eval/examples/vector-dbs/pinecone/constructing_optimal_pinecone.ipynb
+++ b/trulens_eval/examples/vector-dbs/pinecone/constructing_optimal_pinecone.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# Pinecone Configuration Choices on Downstream App Performance\n",
     "\n",
-    "Large Language Models (LLMs) have a hallucination problem. Retrieval Augmented Generation (RAG) is an emerging paradigm that augments LLMs with a knowledge base – a source of truth set of docs often stored in a vector database like Pinecone, to mitigate this problem. To build an effective RAG-style LLM  application, it is important to experiment with various configuration choices while setting up the vector database and study their impact on performance metrics."
+    "Large Language Models (LLMs) have a hallucination problem. Retrieval Augmented Generation (RAG) is an emerging paradigm that augments LLMs with a knowledge base – a source of truth set of docs often stored in a vector database like Pinecone, to mitigate this problem. To build an effective RAG-style LLM  application, it is important to experiment with various configuration choices while setting up the vector database and study their impact on performance metrics.\n",
+    "\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/truera/trulens/blob/main/trulens_eval/examples/vector-dbs/pinecone/constructing_optimal_pinecone.ipynb)"
    ]
   },
   {
@@ -24,17 +26,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''!pip install -qU \\\n",
-    "  trulens_eval==0.5.0 \\\n",
-    "  langchain==0.0.232 \\\n",
-    "  openai==0.27.7 \\\n",
-    "  tiktoken==0.4.0 \\\n",
-    "  \"pinecone-client[grpc]\"==2.2.1 \\\n",
-    "  pinecone_datasets=='0.5.0rc10'''"
+    "! pip install -qU trulens_eval==0.5.0 langchain==0.0.232 openai==0.27.7 tiktoken==0.4.0 \"pinecone-client[grpc]\"==2.2.1 pinecone_datasets=='0.5.0rc10'"
    ]
   },
   {
@@ -702,7 +698,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.11.3"
   },
   "vscode": {
    "interpreter": {
