--- a/trulens_eval/examples/vector-dbs/pinecone/langchain-retrieval-augmentation-with-trulens.ipynb
+++ b/trulens_eval/examples/vector-dbs/pinecone/langchain-retrieval-augmentation-with-trulens.ipynb
@@ -14,6 +14,8 @@
     "\n",
     "A solution to this problem is *retrieval augmentation*. The idea behind this is that we retrieve relevant information from an external knowledge base and give that information to our LLM. In this notebook we will learn how to do that.\n",
     "\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/truera/trulens/blob/main/trulens_eval/examples/vector-dbs/pinecone/langchain-retrieval-augmentation-with-trulens.ipynb)\n",
+    "\n",
     "To begin, we must install the prerequisite libraries that we will be using in this notebook. If we install all libraries we will find a conflict in the Hugging Face `datasets` library so we must install everything in a specific order like so:"
    ]
   },
@@ -23,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install -qU \\\n",
+    "! pip install -qU \\\n",
     "    datasets==2.12.0 \\\n",
     "    apache_beam \\\n",
     "    mwparserfromhell"
