--- a/trulens_eval/examples/vector-dbs/pinecone/llama_index_pinecone_comparecontrast.ipynb
+++ b/trulens_eval/examples/vector-dbs/pinecone/llama_index_pinecone_comparecontrast.ipynb
@@ -8,6 +8,8 @@
     "\n",
     "In this quickstart you will create a simple Llama Index App with Pinecone to answer complex queries over multiple data sources.  You will also log it with TruLens and get feedback on an LLM response.\n",
     "\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/truera/trulens/blob/main/trulens_eval/examples/vector-dbs/pinecone/llama_index_pinecone_comparecontrast.ipynb)\n",
+    "\n",
     "* While Pinecone provides a powerful and efficient retrieval engine, it remains challenging to answer complex questions that require multi-step reasoning and synthesis over many data sources.\n",
     "\n",
     "* With LlamaIndex, we combine the power of vector similiarty search and multi-step reasoning to delivery higher quality and richer responses.\n",
@@ -57,8 +59,8 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ[\"OPENAI_API_KEY\"] = \"\"\n",
-    "os.environ[\"HUGGINGFACE_API_KEY\"] = \"\"\n",
+    "os.environ[\"OPENAI_API_KEY\"] = \"...\"\n",
+    "os.environ[\"HUGGINGFACE_API_KEY\"] = \"...\"\n",
     "\n",
     "PINECONE_API_KEY = \"\"\n",
     "PINECONE_ENV = \"\""
