--- a/trulens_eval/examples/frameworks/langchain/langchain_model_comparison.ipynb
+++ b/trulens_eval/examples/frameworks/langchain/langchain_model_comparison.ipynb
@@ -4,11 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Comparing Flan Model Sizes\n",
+    "## Comparing Models in TruLens\n",
     "\n",
     "Here we'll build a simple app with langchain and load large and small flan.\n",
     "\n",
-    "Then we'll ask it a few football questions and compare the quality of the responses."
+    "Then we'll ask it a few football questions and compare the quality of the responses.\n",
+    "\n",
+    "We'll also compare to OpenAI's text-turbo-003.\n",
+    "\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/truera/trulens/blob/main/trulens_eval/examples/frameworks/langchain/langchain_model_comparison.ipynb)"
    ]
   },
   {
@@ -269,7 +273,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4,
   "vscode": {
