--- a/trulens_eval/examples/frameworks/langchain/langchain_summarize.ipynb
+++ b/trulens_eval/examples/frameworks/langchain/langchain_summarize.ipynb
@@ -1,32 +1,14 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
-    "from pathlib import Path\n",
-    "import sys\n",
+    "## Summarization\n",
     "\n",
-    "# If running from github repo, can use this:\n",
-    "sys.path.append(str(Path().cwd().parent.resolve()))\n",
+    "In this example, you will learn how to create a summarization app and evaluate + track it in TruLens\n",
     "\n",
-    "# Uncomment for more debugging printouts.\n",
-    "\"\"\"\n",
-    "import logging\n",
-    "root = logging.getLogger()\n",
-    "root.setLevel(logging.DEBUG)\n",
-    "\n",
-    "handler = logging.StreamHandler(sys.stdout)\n",
-    "handler.setLevel(logging.DEBUG)\n",
-    "formatter = logging.Formatter('%(asctime)s - %(name)s - %(levelname)s - %(message)s')\n",
-    "handler.setFormatter(formatter)\n",
-    "root.addHandler(handler)\n",
-    "\"\"\"\n",
-    "None"
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/truera/trulens/blob/main/trulens_eval/examples/frameworks/langchain/langchain_summarize.ipynb)"
    ]
   },
   {
@@ -35,12 +17,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from trulens_eval.keys import check_keys\n",
-    "\n",
-    "check_keys(\n",
-    "    \"OPENAI_API_KEY\",\n",
-    "    \"HUGGINGFACE_API_KEY\"\n",
-    ")"
+    "import os\n",
+    "os.environ[\"OPENAI_API_KEY\"] = \"...\"\n",
+    "os.environ[\"HUGGINGFACE_API_KEY\"] = \"...\""
    ]
   },
   {
@@ -55,7 +34,9 @@
     "from trulens_eval import TruChain, Feedback, Tru, Query, FeedbackMode\n",
     "from trulens_eval import OpenAI as OAI\n",
     "\n",
-    "Tru().start_dashboard(_dev=Path().cwd().parent.resolve(), force=True)"
+    "tru = Tru()\n",
+    "\n",
+    "tru.run_dashboard()"
    ]
   },
   {
@@ -66,7 +47,7 @@
    "source": [
     "open_ai = OAI()\n",
     "\n",
-    "# Define a language match feedback function using HuggingFace.\n",
+    "# Define a moderation feedback function using HuggingFace.\n",
     "mod_not_hate = Feedback(open_ai.moderation_not_hate).on(text=Query.RecordInput[:].page_content)\n",
     "\n",
     "def wrap_chain_trulens(chain):\n",
@@ -112,7 +93,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py38_trulens",
+   "display_name": "Python 3.11.4 ('agents')",
    "language": "python",
    "name": "python3"
   },
@@ -126,9 +107,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.11.4"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "7d153714b979d5e6d08dd8ec90712dd93bff2c9b6c1f0c118169738af3430cd4"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
