--- a/trulens_eval/examples/frameworks/llama_index/llama_index_quickstart.ipynb
+++ b/trulens_eval/examples/frameworks/llama_index/llama_index_quickstart.ipynb
@@ -7,7 +7,9 @@
    "source": [
     "# Quickstart\n",
     "\n",
-    "In this quickstart you will create a simple Llama Index App and learn how to log it and get feedback on an LLM response."
+    "In this quickstart you will create a simple Llama Index App and learn how to log it and get feedback on an LLM response.\n",
+    "\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/truera/trulens/blob/main/trulens_eval/examples/frameworks/llama_index/llama_index_quickstart.ipynb)"
    ]
   },
   {
@@ -27,8 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install trulens-eval==0.7.0\n",
-    "!pip install llama_index==0.7.11"
+    "! pip install trulens-eval==0.7.0 llama_index==0.7.0 html2text==2020.1.16"
    ]
   },
   {
@@ -86,12 +87,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# LLama Index starter example from: https://gpt-index.readthedocs.io/en/latest/getting_started/starter_example.html\n",
-    "# In order to run this, download into data/ Paul Graham's Essay 'What I Worked On' from https://github.com/jerryjliu/llama_index/blob/main/examples/paul_graham_essay/data/paul_graham_essay.txt \n",
+    "from llama_index import VectorStoreIndex, SimpleWebPageReader\n",
     "\n",
-    "from llama_index import VectorStoreIndex, SimpleDirectoryReader\n",
-    "\n",
-    "documents = SimpleDirectoryReader('data').load_data()\n",
+    "documents = SimpleWebPageReader(html_to_text=True).load_data(\n",
+    "    [\"http://paulgraham.com/worked.html\"]\n",
+    ")\n",
     "index = VectorStoreIndex.from_documents(documents)\n",
     "\n",
     "query_engine = index.as_query_engine()"
@@ -267,7 +267,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.11.4 ('agents')",
    "language": "python",
    "name": "python3"
   },
@@ -281,11 +281,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.4"
   },
   "vscode": {
    "interpreter": {
-    "hash": "d5737f6101ac92451320b0e41890107145710b89f85909f3780d702e7818f973"
+    "hash": "7d153714b979d5e6d08dd8ec90712dd93bff2c9b6c1f0c118169738af3430cd4"
    }
   }
  },
