--- a/trulens_eval/examples/frameworks/llama_index/llamaindex-yelp-agent.ipynb
+++ b/trulens_eval/examples/frameworks/llama_index/llamaindex-yelp-agent.ipynb
@@ -11,7 +11,9 @@
     "1. Definitiveness - we want our app to respond with authority. We'll accomplish this with a simple, custom feedback function.\n",
     "2. Ground truth eval - we want to make sure our app responds correctly. We will create a ground truth set for this evaluation.\n",
     "\n",
-    "Last, we'll compare the evaluation of this app against a standalone LLM. May the best bot win?"
+    "Last, we'll compare the evaluation of this app against a standalone LLM. May the best bot win?\n",
+    "\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/truera/trulens/blob/main/trulens_eval/examples/frameworks/llama_index/llamaindex-yelp-agent.ipynb)"
    ]
   },
   {
@@ -20,10 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''!pip install trulens_eval==0.6.0 \\\n",
-    "             llama_index==0.7.11 \\\n",
-    "             llama_hub==0.0.13 \\\n",
-    "             yelpapi==2.5.0'''"
+    "! pip install trulens_eval==0.6.0 llama_index==0.7.11 llama_hub==0.0.13 yelpapi==2.5.0"
    ]
   },
   {
