--- a/trulens_eval/examples/no_framework_quickstart.ipynb
+++ b/trulens_eval/examples/no_framework_quickstart.ipynb
@@ -7,7 +7,9 @@
    "source": [
     "# Quickstart\n",
     "\n",
-    "In this quickstart you will create a simple text to text application and learn how to log it and get feedback."
+    "In this quickstart you will create a simple text to text application and learn how to log it and get feedback.\n",
+    "\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/truera/trulens/blob/main/trulens_eval/examples/no_framework_quickstart.ipynb)"
    ]
   },
   {
