Minor fixes to agents notebook (#330)
* Minor fixes to agents notebook

* remove stray '

* ready

* small updates

* fix spacing

---------

Co-authored-by: Shayak Sen <shayak@truera.com>
Co-authored-by: Josh Reini <60949774+joshreini1@users.noreply.github.com>
Co-authored-by: Josh Reini <josh.reini@truera.com>

--- a/trulens_eval/examples/frameworks/llama_index/llamaindex-yelp-agent.ipynb
+++ b/trulens_eval/examples/frameworks/llama_index/llamaindex-yelp-agent.ipynb
@@ -6,10 +6,19 @@
    "source": [
     "## Llama-Index Agents + Ground Truth & Custom Evaluations\n",
     "\n",
-    "In this example, we build an agent-based app with Llama Index to answer questions with the help of Yelp. We'll evaluate it using two feedback functions:\n",
+    "In this example, we build an agent-based app with Llama Index to answer questions with the help of Yelp. We'll evaluate it using a few different feedback functions (some custom, some out-of-the-box)\n",
     "\n",
-    "1. Definitiveness - we want our app to respond with authority. We'll accomplish this with a simple, custom feedback function.\n",
-    "2. Ground truth eval - we want to make sure our app responds correctly. We will create a ground truth set for this evaluation.\n",
+    "The first set of feedback functions complete what the non-hallucination triad. However because we're dealing with agents here,  we've added a fourth leg (query translation) to cover the additional interaction between the query planner and the agent. This combination provides a foundation for eliminating hallucination in LLM applications.\n",
+    "\n",
+    "1. Query Translation - The first step. Here we compare the similarity of the original user query to the query sent to the agent. This ensures that we're providing the agent with the correct question.\n",
+    "2. Context or QS Relevance - Next, we compare the relevance of the context provided by the agent back to the original query. This ensures that we're providing context for the right question.\n",
+    "3. Groundedness - Third, we ensure that the final answer is supported by the context. This ensures that the LLM is not extending beyond the information provided by the agent.\n",
+    "4. Question Answer Relevance - Last, we want to make sure that the final answer provided is relevant to the user query. This last step confirms that the answer is not only supported but also useful to the end user.\n",
+    "\n",
+    "In this example, we'll add two additional feedback functions.\n",
+    "\n",
+    "5. Ratings usage - evaluate if the summarized context uses ratings as justification. Note: this may not be relevant for all queries.\n",
+    "6. Ground truth eval - we want to make sure our app responds correctly. We will create a ground truth set for this evaluation.\n",
     "\n",
     "Last, we'll compare the evaluation of this app against a standalone LLM. May the best bot win?\n",
     "\n",
@@ -22,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! pip install trulens_eval==0.6.0 llama_index==0.7.11 llama_hub==0.0.13 yelpapi==2.5.0"
+    "! pip install trulens_eval==0.7.0 llama_index==0.7.11 llama_hub==0.0.13 yelpapi==2.5.0"
    ]
   },
   {
@@ -31,9 +40,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "YELP_API_KEY = \"...\"\n",
+    "YELP_CLIENT_ID = \"...\"\n",
+    "OPENAI_API_KEY = \"...\"\n",
+    "\n",
     "import os\n",
-    "os.environ[\"OPENAI_API_KEY\"] = \"...\"\n",
-    "os.environ[\"HUGGINGFACE_API_KEY\"] = \"...\""
+    "os.environ[\"OPENAI_API_KEY\"] = OPENAI_API_KEY"
    ]
   },
   {
@@ -70,8 +82,7 @@
     "from llama_index.tools.tool_spec.load_and_search.base import LoadAndSearchToolSpec\n",
     "\n",
     "# Add Yelp API key and client ID\n",
-    "tool_spec = YelpToolSpec(api_key=\"...\",\n",
-    "client_id=\"...\")"
+    "tool_spec = YelpToolSpec(api_key=YELP_API_KEY, client_id=YELP_CLIENT_ID)"
    ]
   },
   {
@@ -118,11 +129,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Custom yelp evaluations\n",
-    "\n",
-    "Here we'll set a number of custom evals specific to our problem, including:\n",
-    "1. Query translation score: Check to make sure the query used by Yelp Business Search matches the user query.\n",
-    "2. Check to see if Yelp ratings are included in the context returned by Yelp business search."
+    "## Evaluation and Tracking with TruLens"
    ]
   },
   {
@@ -131,8 +138,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from trulens_eval import Feedback, OpenAI, Tru, TruBasicApp, TruLlama\n",
-    "from trulens_eval.feedback import GroundTruthAgreement\n",
+    "from trulens_eval import Feedback, OpenAI, Tru, TruBasicApp, TruLlama, Select, OpenAI as fOpenAI\n",
+    "from trulens_eval.feedback import GroundTruthAgreement, Groundedness\n",
+    "import numpy as np\n",
+    "from trulens_eval import OpenAI as fOpenAI\n",
     "\n",
     "tru = Tru()\n",
     "\n",
@@ -157,13 +166,28 @@
     "    )[\"choices\"][0][\"message\"][\"content\"])\n",
     "\n",
     "custom = OpenAI_custom()\n",
-    "from trulens_eval import Select\n",
-    "query_translation_score = Feedback(custom.query_translation_score).on_input().on(\n",
+    "f_query_translation = Feedback(custom.query_translation_score).on_input().on(\n",
     "    Select.Record.calls[0].args.str_or_query_bundle # check the query bundle passed to yelp api\n",
     ")\n",
-    "ratings_usage = Feedback(custom.ratings_usage).on(\n",
+    "f_ratings_usage = Feedback(custom.ratings_usage).on(\n",
     "    Select.App.app.chat_history[-1][\"content\"] # check the last content chunk for mentions of ratings or reviews\n",
-    ")"
+    ")\n",
+    "\n",
+    "fopenai = fOpenAI()\n",
+    "# Question/statement (context) relevance between question and last context chunk (i.e. summary)\n",
+    "f_qs_relevance = Feedback(fopenai.qs_relevance).on_input().on(\n",
+    "    Select.App.app.chat_history[-1][\"content\"] # check the last context chunk\n",
+    ")\n",
+    "\n",
+    "# Question/answer relevance between overall question and answer.\n",
+    "f_qa_relevance = Feedback(fopenai.relevance).on_input_output()\n",
+    "\n",
+    "# Groundedness\n",
+    "grounded = Groundedness(groundedness_provider=fopenai)\n",
+    "\n",
+    "f_groundedness = Feedback(grounded.groundedness_measure).on(\n",
+    "    Select.App.app.chat_history[-1][\"content\"] # check the last context chunk\n",
+    ").on_output().aggregate(grounded.grounded_statements_aggregator)\n"
    ]
   },
   {
@@ -192,35 +216,6 @@
     "]\n",
     "\n",
     "f_groundtruth = Feedback(GroundTruthAgreement(golden_set).agreement_measure).on_input_output()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Standard Relevance Evals\n",
-    "\n",
-    "Last, we'll add in our standard relevance evals.\n",
-    "\n",
-    "We can use the Select function to capture deep context in our app for QS relevance, alongside our standard QA relevance on input and output."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "from trulens_eval import OpenAI as fOpenAI\n",
-    "fopenai = fOpenAI()\n",
-    "# Question/statement relevance between question and last context chunk (i.e. summary)\n",
-    "f_qs_relevance = Feedback(fopenai.qs_relevance).on_input().on(\n",
-    "    Select.App.app.chat_history[-1][\"content\"] # check the last context chunk\n",
-    ")\n",
-    "\n",
-    "# Question/answer relevance between overall question and answer.\n",
-    "f_qa_relevance = Feedback(fopenai.relevance).on_input_output()"
    ]
   },
   {
@@ -259,7 +254,7 @@
     "yelp_app = TruLlama(agent,\n",
     "    app_id='YelpAgent',\n",
     "    tags = \"agent prototype\",\n",
-    "    feedbacks = [f_qa_relevance, f_groundtruth, f_qs_relevance, query_translation_score, ratings_usage])"
+    "    feedbacks = [f_qa_relevance, f_groundtruth, f_qs_relevance, f_groundedness, f_query_translation, f_ratings_usage])"
    ]
   },
   {
@@ -318,7 +313,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.11.4 ('agents')",
    "language": "python",
    "name": "python3"
   },
@@ -336,7 +331,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "9404565ab2271c01f32a5ebf202ce74a5a811d6909f1828a5ff1298ed34c2b97"
+    "hash": "7d153714b979d5e6d08dd8ec90712dd93bff2c9b6c1f0c118169738af3430cd4"
    }
   }
  },
